--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Abel&display=swap");
 html {
     font-size: 62.5%;
     box-sizing: border-box;
@@ -13,4 +14,54 @@ html {
 
 body {
     font-size: 1.5rem;
+    background-color: #686de0;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    font-family: "Abel", sans-serif;
+}
+
+/*  -------------------------------------  */
+
+.joke-box {
+    background-color: #fff;
+    padding: 5rem;
+    border-radius: 1.5rem;
+    width: 50%;
+    display: grid;
+    justify-items: center;
+}
+
+.joke-box__title {
+    text-transform: capitalize;
+    font-size: 1.8rem;
+    margin-bottom: 3rem;
+    color: #999;
+}
+
+.joke-box__joke {
+    line-height: 2;
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.joke-box__btn {
+    text-transform: capitalize;
+    font-size: 1.8rem;
+    padding: 1.5rem 2rem;
+    color: white;
+    background-color: #9f68e0;
+    border-radius: 1rem;
+    border: none;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.joke-box__btn:hover,
+.joke-box__btn:focus {
+    color: #9f68e0;
+    box-shadow: inset 0px 0px 5px #9f68e0;
+    background-color: #fff;
 }
